# Forge-Hub-RAG-System

./: .coverage  .gitignore  README.md
advanced-rag-chatbot/: .env.example  .eslintrc.json  .gitignore  LICENSE  README.md  justfile  package-lock.json  package.json  tsconfig.base.json  turbo.json
advanced-rag-chatbot/apps/backend/: .env.example  README.md  requirements.txt
advanced-rag-chatbot/apps/backend/app/: __init__.py  chat.py  config.py  db.py  documents.py  embeddings.py  main.py  retrieval.py  schemas.py  sessions.py
advanced-rag-chatbot/apps/backend/tests/: test_health.py
advanced-rag-chatbot/apps/frontend/: .env.example  .eslintrc.json  jest.config.ts  package.json  tsconfig.json
backend/: README.md  pyproject.toml
backend/.github/workflows/: ci.yml
backend/migrations/: 0001_tables.sql  0002_functions.sql
backend/scripts/: migrate.py
backend/src/app/api/: main.py
backend/src/app/api/routers/: __init__.py  chat.py
backend/src/app/config/: settings.py
backend/src/app/observability/: errors.py  logging.py  middleware.py  telemetry.py
backend/src/app/services/: rag_pipeline.py  supabase_client.py
backend/src/app/utils/: rate_limit.py
rag-document-system/: PHASE1-COMPLETE.md  PHASE3-COMPLETE.md  README.md  migrate-phase2.js  migrate-phase3.js  package-lock.json  package-scripts.md  package.json  setup-database.js  test-api.js  test-phase3-complete.mjs  test-phase3.mjs
rag-document-system/src/: middleware.ts
rag-document-system/src/app/: page.tsx
scripts/: DB_SETUP.md  bootstrap.sql  validate_db.sql
(+58 files in other folders)
