[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "namm9an",email = "naman.moudgill77@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "supabase (>=2.18.0,<3.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
black = "^25.1.0"
ruff = "^0.4.8"
mypy = "^1.10.0"
anyio = "^4.4.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-ra --maxfail=1 --cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
packages = ["app"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
